test_programs/compile_failure/noirc_frontend_tests_check_impl_duplicate_method_without_self/src/main.nr

    pub struct Foo {}

    impl Foo {
        fn foo() {}
        fn foo() {}
    }

    fn main() {}
    